@@ -2044,6 +2044,9 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
   .icon-ackn::before {
     background: url(../img/icon-sprite.svg) no-repeat -45px -693px; }
 
+.icon-none {
+  margin-left: 18px; }
+
 .icon-tree-top-bottom {
   margin: 0 12px 0 0; }
   .icon-tree-top-bottom::before {
