@@ -3009,6 +3009,10 @@ $var-icons: (
 	}
 }
 
+.icon-none {
+	margin-left: 18px;
+}
+
 $trigger-expression-tree-icons: (
 	top-bottom: url(../img/icon-sprite.svg) no-repeat -84px -300px,
 	top-bottom-right: url(../img/icon-sprite.svg) no-repeat -84px -334px,
